[gd_scene load_steps=4 format=2]

[ext_resource path="res://square.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shape.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 112 )

[node name="Shape" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="square1" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 0.513726, 0, 1 )

[node name="square2" parent="." instance=ExtResource( 1 )]

[node name="square3" parent="." instance=ExtResource( 1 )]

[node name="square4" parent="." instance=ExtResource( 1 )]
